--- a/stats-glow-mind/src/app/components/glossary/glossary.component.html
+++ b/stats-glow-mind/src/app/components/glossary/glossary.component.html
@@ -1,120 +1,156 @@
 <div class="wrapper">
     <div class="glossary">
         <div class="title">
-            <h1>Glosario</h1>
+            <h1>{{ 'FOOTER.GLOSSARY' | translate }}</h1>
         </div>
         <div class="table-container">
             <table class="table table-bordered">
                 <thead class="thead-dark">
                     <tr>
-                        <th>TÉRMINO</th>
-                        <th>DESCRIPCIÓN</th>
+                        <th>{{ 'GLOSSARY.TERM' | translate }}</th>
+                        <th>{{ 'GLOSSARY.DESCRIPTION' | translate }}</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td class="term">GP</td>
-                        <td>Games Played: Partidos jugados.</td>
+                        <td>{{ 'GLOSSARY.GP' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">MIN</td>
-                        <td>Minutes: Minutos jugados.</td>
+                        <td>{{ 'GLOSSARY.MIN' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">W</td>
-                        <td>Wins: Victorias.</td>
+                        <td>{{ 'GLOSSARY.W' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">L</td>
-                        <td>Losses: Derrotas.</td>
+                        <td>{{ 'GLOSSARY.L' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">W%</td>
-                        <td>Winning Percentage: Porcentaje de victorias.</td>
+                        <td>{{ 'GLOSSARY.W_PERCENT' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">PTS</td>
-                        <td>Points: Puntos anotados.</td>
+                        <td>{{ 'GLOSSARY.PTS' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">FGM</td>
-                        <td>Field Goals Made: Tiros de campo convertidos.</td>
+                        <td>{{ 'GLOSSARY.FGM' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">FGA</td>
-                        <td>Field Goals Attempted: Tiros de campo intentados.</td>
+                        <td>{{ 'GLOSSARY.FGA' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">FG%</td>
-                        <td>Field Goal Percentage: Porcentaje de tiros de campo.</td>
+                        <td>{{ 'GLOSSARY.FG_PERCENT' | translate }}</td>
+                    </tr>
+                    <tr>
+                        <td class="term">TP</td>
+                        <td>{{ 'GLOSSARY.TP' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">TPM</td>
-                        <td>Three-Point Field Goals Made: Triples convertidos.</td>
+                        <td>{{ 'GLOSSARY.TPM' | translate }}</td>
+                    </tr>
+                    <tr>
+                        <td class="term">TPF</td>
+                        <td>{{ 'GLOSSARY.TPF' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">TPA</td>
-                        <td>Three-Point Field Goals Attempted: Triples intentados.</td>
+                        <td>{{ 'GLOSSARY.TPA' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">TP%</td>
-                        <td>Three-Point Field Goal Percentage: Porcentaje de triples.</td>
+                        <td>{{ 'GLOSSARY.TP_PERCENT' | translate }}</td>
+                    </tr>
+                    <tr>
+                        <td class="term">2P</td>
+                        <td>{{ 'GLOSSARY.2P' | translate }}</td>
+                    </tr>
+                    <tr>
+                        <td class="term">2PM</td>
+                        <td>{{ 'GLOSSARY.2PM' | translate }}</td>
+                    </tr>
+                    <tr>
+                        <td class="term">2PF</td>
+                        <td>{{ 'GLOSSARY.2PF' | translate }}</td>
+                    </tr>
+                    <tr>
+                        <td class="term">2PA</td>
+                        <td>{{ 'GLOSSARY.2PA' | translate }}</td>
+                    </tr>
+                    <tr>
+                        <td class="term">FT</td>
+                        <td>{{ 'GLOSSARY.FT' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">FTM</td>
-                        <td>Free Throws Made: Tiros libres convertidos.</td>
+                        <td>{{ 'GLOSSARY.FTM' | translate }}</td>
+                    </tr>
+                    <tr>
+                        <td class="term">FTF</td>
+                        <td>{{ 'GLOSSARY.FTF' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">FTA</td>
-                        <td>Free Throws Attempted: Tiros libres intentados.</td>
+                        <td>{{ 'GLOSSARY.FTA' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">FT%</td>
-                        <td>Free Throw Percentage: Porcentaje de tiros libres.</td>
+                        <td>{{ 'GLOSSARY.FT_PERCENT' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">OREB</td>
-                        <td>Offensive Rebounds: Rebotes ofensivos.</td>
+                        <td>{{ 'GLOSSARY.OREB' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">DREB</td>
-                        <td>Defensive Rebounds: Rebotes defensivos.</td>
+                        <td>{{ 'GLOSSARY.DREB' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">REB</td>
-                        <td>Rebounds: Rebotes totales.</td>
+                        <td>{{ 'GLOSSARY.REB' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">AST</td>
-                        <td>Assists: Asistencias.</td>
+                        <td>{{ 'GLOSSARY.AST' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">BLK</td>
-                        <td>Blocks: Tapones o bloqueos.</td>
+                        <td>{{ 'GLOSSARY.BLK' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">TOV</td>
-                        <td>Turnovers: Pérdidas de balón.</td>
+                        <td>{{ 'GLOSSARY.TOV' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">PF</td>
-                        <td>Personal Fouls: Faltas personales.</td>
+                        <td>{{ 'GLOSSARY.PF' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">EFF</td>
-                        <td>Efficiency: Eficiencia del jugador.</td>
+                        <td>{{ 'GLOSSARY.EFF' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">+/-</td>
-                        <td>Plus/Minus: Indicador de la diferencia de puntos cuando un jugador está en la cancha.</td>
+                        <td>{{ 'GLOSSARY.PLUS_MINUS' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">NO</td>
-                        <td>Number: Número de camiseta del jugador.</td>
+                        <td>{{ 'GLOSSARY.NO' | translate }}</td>
                     </tr>
                     <tr>
                         <td class="term">POS</td>
-                        <td>Position: Posición del jugador (PG, SG, SF, PF, C).</td>
+                        <td>{{ 'GLOSSARY.POS' | translate }}</td>
+                    </tr>
+                    <tr>
+                        <td class="term">AVG PTS</td>
+                        <td>{{ 'GLOSSARY.AVG_PTS' | translate }}</td>
                     </tr>
                 </tbody>
             </table>
