--- a/stats-glow-mind/src/app/components/teams/team-players/team-players.component.html
+++ b/stats-glow-mind/src/app/components/teams/team-players/team-players.component.html
@@ -9,11 +9,11 @@
             </div>
         </div>
         <div class="btn-stats">
-            <button mat-flat-button color="primary" [routerLink]="['/teams', teamNickname]" >ESTADÍSTICAS</button>
+            <button mat-flat-button color="primary" [routerLink]="['/teams', teamNickname]">{{ 'TEAMS.STATISTICS' | translate }}</button>
         </div>
         <div class="table-players">
             <div class="name-stats">
-                <h2>Jugadores</h2>
+                <h2>{{ 'TEAMS.PLAYERS' | translate }}</h2>
             </div>
             <table class="table">
                 <thead>
