--- a/stats-glow-mind/src/app/components/login/login.component.html
+++ b/stats-glow-mind/src/app/components/login/login.component.html
@@ -1,16 +1,16 @@
 <div class="wrapper">
     <div class="box-form">
         <img class="register_icon" src="../assets/images/icons/register.png" alt="Login">
-        <h1>Inicia sesión</h1>
+        <h1>{{ 'LOGIN.TITLE' | translate }}</h1>
         <form class="form" [formGroup]="formLogin" (ngSubmit)="onSubmit()">
             <div class="mb-3">
                 <mat-label class="form-label">Email:</mat-label><br>
                 <mat-form-field>
-                    <input type="email" matInput class="form-control text-center" formControlName="email" placeholder="Ex. StatsGlowMind@example.com">
+                    <input type="email" matInput class="form-control text-center" formControlName="email" placeholder="{{ 'LOGIN.EMAIL_PLACEHOLDER' | translate }}">
                 </mat-form-field>
             </div>
             <div class="mb-3">
-                <mat-label class="form-label">Contraseña:</mat-label><br>
+                <mat-label class="form-label">{{ 'LOGIN.PASSWORD' | translate }}:</mat-label><br>
                 <mat-form-field>
                     <input matInput [type]="hide ? 'password' : 'text'" class="form-control text-center" formControlName="password">
                     <button mat-icon-button matSuffix (click)="showPassword($event)" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
@@ -18,10 +18,10 @@
                     </button>
                 </mat-form-field>
             </div>
-            <button mat-raised-button color="primary" class="enviar" type="submit" value="Enviar">Enviar</button>
+            <button mat-raised-button color="primary" class="enviar" type="submit" value="Enviar">{{ 'LOGIN.SUBMIT' | translate }}</button>
         </form>
         <mat-divider></mat-divider>
-        <p class="mt-3">¿No tienes cuenta? <a routerLink="/register">Registrate</a></p>
-        <button class="google-btn" (click)="onClick()"><img class="google_icon" src="../assets/images/icons/google.png" alt="Login Google">Inicia Sesión con Google</button>
+        <p class="mt-3">{{ 'LOGIN.NO_ACCOUNT' | translate }} <a routerLink="/register">{{ 'LOGIN.REGISTER' | translate }}</a></p>
+        <button class="google-btn" (click)="onClick()"><img class="google_icon" src="../assets/images/icons/google.png" alt="Login Google">{{ 'LOGIN.GOOGLE_LOGIN' | translate }}</button>
     </div>
 </div>
