--- a/stats-glow-mind/src/app/components/predict/predict.component.html
+++ b/stats-glow-mind/src/app/components/predict/predict.component.html
@@ -1,13 +1,13 @@
 <div class="wrapper"> 
   <div class="predict">
     <div class="title">
-      <h1>Predicción de Partidos</h1>
+      <h1>{{ 'PREDICT.TITLE' | translate }}</h1>
     </div>
     <div class="select-teams">
       <div class="mb-3">
-        <h3>Equipo Local</h3>
+        <h3>{{ 'PREDICT.HOME_TEAM' | translate }}</h3>
         <mat-form-field>
-          <mat-label>Equipo Local</mat-label>
+          <mat-label>{{ 'PREDICT.HOME_TEAM' | translate }}</mat-label>
           <mat-select color="primary" [formControl]="homeTeamControl">
             <ng-container *ngFor="let group of teamGroups">
               <mat-optgroup [label]="group.name" [disabled]="group.disabled">
@@ -23,9 +23,9 @@
         <span>VS</span>
       </div>
       <div class="mb-3">
-        <h3>Equipo Visitante</h3>
+        <h3>{{ 'PREDICT.VISITOR_TEAM' | translate }}</h3>
         <mat-form-field>
-          <mat-label>Equipo Visitante</mat-label>
+          <mat-label>{{ 'PREDICT.VISITOR_TEAM' | translate }}</mat-label>
           <mat-select color="primary" [formControl]="visitorTeamControl">
             <ng-container *ngFor="let group of teamGroups">
               <mat-optgroup [label]="group.name" [disabled]="group.disabled">
@@ -39,12 +39,12 @@
       </div>
     </div>
     <div class="btn-predict">
-      <button mat-raised-button color="accent" (click)="predictGame()">Prededir Partido</button>
+      <button mat-raised-button color="accent" (click)="predictGame()">{{ 'PREDICT.BUTTON' | translate }}</button>
     </div>
     <hr>
     <div class="charts-stats">
       <div>
-        <h2>Probabilidad de Victoria</h2>
+        <h2>{{ 'PREDICT.PROBABILITY_TITLE' | translate }}</h2>
       </div>
       <div class="chart-container">
         <div class="chart-content-2">
