--- a/stats-glow-mind/src/app/components/stats/standings/standings.component.html
+++ b/stats-glow-mind/src/app/components/stats/standings/standings.component.html
@@ -1,8 +1,8 @@
 <div class="standings">
   <div class="conference-table">
     <div class="title-table">
-      <h2>Conferencia Este</h2>
-      <button mat-icon-button color="accent" (click)="routeGlossary()" matTooltip="Glosario">
+      <h2>{{ 'PREDICT.EAST' | translate }}</h2>
+      <button mat-icon-button color="accent" (click)="routeGlossary()" matTooltip="{{ 'FOOTER.GLOSSARY' | translate }}">
         <mat-icon>info</mat-icon>
       </button>
     </div>
@@ -55,8 +55,8 @@
   </div>
   <div class="conference-table">
     <div class="title-table">
-      <h2>Conferencia Oeste</h2>
-      <button mat-icon-button color="accent" (click)="routeGlossary()" matTooltip="Glosario">
+      <h2>{{ 'PREDICT.WEST' | translate }}</h2>
+      <button mat-icon-button color="accent" (click)="routeGlossary()" matTooltip="Glosario" i18n-matTooltip>
         <mat-icon>info</mat-icon>
       </button>
     </div>
