--- a/stats-glow-mind/src/app/components/stats/stats.component.html
+++ b/stats-glow-mind/src/app/components/stats/stats.component.html
@@ -2,19 +2,19 @@
     <div class="stats-container">
         <button (click)="showComponent('standings')" routerLink="/stats/standings" routerLinkActive="active">
             <img class="stats_icon" src="../assets/images/icons/podium.png" alt="Clasificación">
-            CLASIFICACIÓN
+            {{ 'MAIN.STANDINGS' | translate }}
         </button>
         <button (click)="showComponent('playoffs')" routerLink="/stats/playoffs" routerLinkActive="active">
             <img class="stats_icon" src="../assets/images/icons/play.png" alt="Playoffs">
             PLAYOFFS
         </button>
-        <button (click)="showComponent('games')" routerLink="/stats/games" routerLinkActive="active">
+        <button (click)="showComponent('games')" routerLink="/stats/games" routerLinkActive="active" i18n>
             <img class="stats_icon" src="../assets/images/icons/game.png" alt="Partidos">
-            PARTIDOS
+            {{ 'MAIN.GAMES' | translate }}
         </button>
         <button (click)="showComponent('leaders')" routerLink="/stats/leaders" routerLinkActive="active">
             <img class="stats_icon" src="../assets/images/icons/star.png" alt="Lideres">
-            LÍDERES
+            {{ 'MAIN.LEADERS' | translate }}
         </button>
     </div>
 </div>
